--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -60,6 +60,7 @@
                             android:layout_height="wrap_content">
 
                             <RadioButton
+                                style="@style/radiobutton"
                                 android:id="@+id/istatus1"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -67,18 +68,9 @@
                                 android:text="@string/istatus1"
                                 android:textSize="25sp" />
 
-                            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
-                                android:id="@+id/RS82"
-                                style="@style/textInput"
-                                android:hint="@string/RS82"
-                                android:text='@{istatus1.checked? RS82.getText().toString() : "" }'
-                                android:textColor="@android:color/black"
-                                android:visibility='@{istatus1.checked? View.VISIBLE : View.GONE}'
-                                app:dateFormat="dd-MM-yyyy"
-                                app:minDate="CR_DATE" />
-
 
                             <RadioButton
+                                style="@style/radiobutton"
                                 android:id="@+id/istatus5"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
