--- a/app/src/main/res/layout/activity_f1_section07.xml
+++ b/app/src/main/res/layout/activity_f1_section07.xml
@@ -119,11 +119,8 @@
 
                             <EditText
                                 android:id="@+id/RS13296x"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:digits="@string/ed_sentence"
+                                style="@style/EditTextAlphaNumeric"
                                 android:hint="@string/Especify"
-                                android:inputType="textShortMessage"
                                 android:text='@{RS13296.checked ? RS13296x.getText().toString() : "" }'
                                 android:visibility='@{RS13296.checked ? View.VISIBLE : View.GONE }' />
 
@@ -295,16 +292,12 @@
 
                         <EditText
                             android:id="@+id/RS143"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:digits="@string/ed_sentence"
-                            android:hint="@string/Especify"
-                            android:inputType="textShortMessage" />
+                            style="@style/EditTextAlphaNumeric"
+                            android:hint="@string/Especify" />
 
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
-
 
             </LinearLayout>
 
@@ -341,6 +334,7 @@
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold" />
+
             </LinearLayout>
 
         </LinearLayout>
