--- a/app/src/main/res/layout/layout_tests.xml
+++ b/app/src/main/res/layout/layout_tests.xml
@@ -4,7 +4,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layoutDirection="ltr">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btnClearView"
@@ -57,8 +58,7 @@
 
                             <RadioGroup
                                 android:id="@+id/RS117A"
-                                style="@style/radiogroup"
-                                android:layoutDirection="ltr">
+                                style="@style/radiogroup">
 
                                 <RadioButton
                                     android:id="@+id/RS117Aa"
@@ -131,7 +131,6 @@
                             <RadioGroup
                                 android:id="@+id/RS117B"
                                 style="@style/radiogroup"
-                                android:layoutDirection="ltr"
                                 android:orientation="horizontal">
 
                                 <RadioButton
@@ -160,7 +159,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5sp"
-                            android:layoutDirection="ltr"
                             android:orientation="horizontal">
 
 
@@ -172,11 +170,10 @@
 
                             <com.edittextpicker.aliazaz.EditTextPicker
                                 android:id="@+id/RS117C"
+                                style="@style/EditTextNum"
                                 android:layout_width="0dp"
-                                android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:hint="@string/Especify"
-                                android:inputType="number"
                                 app:mask="##"
                                 app:maxValue="90"
                                 app:minValue="10"
@@ -190,7 +187,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5sp"
-                            android:layoutDirection="ltr"
                             android:orientation="horizontal">
 
 
@@ -202,11 +198,10 @@
 
                             <com.edittextpicker.aliazaz.EditTextPicker
                                 android:id="@+id/RS117D"
+                                style="@style/EditTextNum"
                                 android:layout_width="0dp"
-                                android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:hint="@string/Especify"
-                                android:inputType="number"
                                 app:mask="##"
                                 app:maxValue="90"
                                 app:minValue="10"
@@ -220,7 +215,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5sp"
-                            android:layoutDirection="ltr"
                             android:orientation="horizontal">
 
 
@@ -232,11 +226,10 @@
 
                             <com.edittextpicker.aliazaz.EditTextPicker
                                 android:id="@+id/RS117E"
+                                style="@style/EditTextNum"
                                 android:layout_width="0dp"
-                                android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:hint="@string/Especify"
-                                android:inputType="number"
                                 app:mask="##"
                                 app:maxValue="90"
                                 app:minValue="10"
@@ -250,158 +243,6 @@
                 </android.support.v7.widget.CardView>
 
             </LinearLayout>
-
-            <!-- <LinearLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:layoutDirection="rtl"
-                 android:orientation="vertical">
-
-                 <TextView
-                     android:id="@+id/txtpofpa15"
-                     style="@style/i_textview"
-                     android:text="@string/pofpa1500"
-                     android:textAlignment="center"
-                     android:textStyle="bold" />
-
-                 <LinearLayout
-                     android:id="@+id/llpofpa151a"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="10sp"
-                     android:orientation="horizontal">
-
-                     <TextView
-                         android:layout_width="0dp"
-                         android:layout_height="wrap_content"
-                         android:layout_weight="1"
-                         android:text="@string/pofpa151a" />
-
-
-                     <EditText
-                         android:id="@+id/pofpa151a"
-                         style="@style/textInput"
-                         android:layout_width="0dp"
-                         android:layout_height="wrap_content"
-                         android:layout_weight="1"
-                         android:hint="@string/pofpa151a" />
-
-                 </LinearLayout>
-
-                 <LinearLayout
-                     android:id="@+id/llpofpa151c"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="10sp"
-                     android:orientation="horizontal">
-
-
-                     <TextView
-                         android:layout_width="0dp"
-                         android:layout_height="wrap_content"
-                         android:layout_weight="1"
-                         android:text="@string/pofpa151c" />
-
-
-                     <EditText
-                         android:id="@+id/pofpa151c"
-                         style="@style/EditTextAlphaNumericc"
-                         android:layout_width="0dp"
-                         android:layout_height="wrap_content"
-                         android:layout_weight="1"
-                         android:hint="@string/pofpa151c" />
-
-                 </LinearLayout>
-
-                 <LinearLayout
-                     android:id="@+id/llpofpa151b"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:orientation="horizontal">
-
-
-                     <TextView
-                         android:layout_width="0dp"
-                         android:layout_height="wrap_content"
-                         android:layout_weight="1"
-                         android:text="@string/pofpa151b" />
-
-                     <com.edittextpicker.aliazaz.EditTextPicker
-                         android:id="@+id/pofpa151b"
-                         style="@style/EditText_number"
-                         android:layout_width="0dp"
-                         android:layout_height="wrap_content"
-                         android:layout_weight="1"
-                         android:hint="@string/pofpa151b"
-                         app:mask="#"
-                         app:maxValue="4"
-                         app:minValue="1"
-                         app:type="range" />
-
-                 </LinearLayout>
-
-                 <LinearLayout
-                     android:id="@+id/llpofpa151d"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:orientation="vertical">
-
-
-                     <TextView
-                         style="@style/i_textview1"
-                         android:text="@string/pofpa151d" />
-
-                     <RadioGroup
-                         android:id="@+id/pofpa151d"
-                         android:layout_width="match_parent"
-                         android:layout_height="wrap_content"
-                         android:orientation="horizontal">
-
-                         <RadioButton
-                             android:id="@+id/pofpa151da"
-                             android:layout_width="0dp"
-                             android:layout_height="wrap_content"
-                             android:layout_marginBottom="1dp"
-                             android:layout_weight="1"
-                             android:text="@string/pofpa151da" />
-
-                         <RadioButton
-                             android:id="@+id/pofpa151db"
-                             android:layout_width="0dp"
-                             android:layout_height="wrap_content"
-                             android:layout_marginBottom="1dp"
-                             android:layout_weight="1"
-                             android:text="@string/pofpa151db" />
-
-                         <RadioButton
-                             android:id="@+id/pofpa151dc"
-                             android:layout_width="0dp"
-                             android:layout_height="wrap_content"
-                             android:layout_marginBottom="1dp"
-                             android:layout_weight="1"
-                             android:text="@string/pofpa151dc" />
-
-                     </RadioGroup>
-
-                 </LinearLayout>
-
-                 <CheckBox
-                     android:id="@+id/pofpa152"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginBottom="1dp"
-                     android:tag="-1"
-                     android:text="@string/pofpa152" />
-
-                 <CheckBox
-                     android:id="@+id/pofpa1597"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginBottom="1dp"
-                     android:tag="-1"
-                     android:text="@string/pofpa1597" />
-
-             </LinearLayout>-->
 
         </android.support.v7.widget.CardView>
 
